--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mymartupdate3
+spring.datasource.url=jdbc:mysql://localhost:3306/yeswanth3
 spring.datasource.username=root
 spring.datasource.password=Imran@1
 
